Version 0.6.0+dev
- test also on PHP 7.3 (on both Travis CI and GitLab CI)
- use phing's targets from nexendrie/code-quality
- raised minimal version of PHP to 7.2

Version 0.6.0
- added more files to .gitignore and .gitattributes
- travis is no longer allowed to fail with PHP 7.2
- fixed path for dev-autoloading

Version 0.5.0
- use scrutinizer instead of codacy
- test also on PHP 7.2 (on both Travis CI and GitLab CI)

Version 0.4.0
- test also on php master on Travis CI
- use codacy instead of coveralls

Version 0.3.0
- raised phpstan's level to 7
- added basic files for testing
- renamed .gitattributes (to keep it and listed files in releases)

Version 0.2.0
- use phing for testing in Travis CI
- added keywords and autoloading for Composer

Version 0.1.0
- use image nexendrie/php in GitLab CI and phing for testing (in GitLab CI)
- use authoritative classmap with Composer
- added generating and deploying documentation for GitLab CI

Version 0.0.2
- added .gitattributes, CONTRIBUTING.md and CHANGELOG

Version 0.0.1
- first version