@@ -159,11 +159,13 @@ build:
         rabbitmq: false
     nodes:
         tests:
+            dependencies:
+                override:
+                    - wget https://www.phing.info/get/phing-latest.phar && mv phing-latest.phar phing && chmod +x phing
+                    - composer update --prefer-dist --no-progress --no-suggest --no-interaction
             tests:
                 override:
                     - php-scrutinizer-run
-                    - wget https://www.phing.info/get/phing-latest.phar && mv phing-latest.phar phing && chmod +x phing
-                    - composer install --prefer-dist --no-progress --no-suggest --no-interaction
                     -
                         command: ./vendor/bin/phpcs . --extensions=php,phpt --report=checkstyle --report-file=codesniffer.cs --standard=vendor/nexendrie/code-quality/ruleset.xml
                         analysis:
